# freeagent-sdk

./: .gitignore  BUILD_PROGRESS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  build.sh  freeagent-sdk.html  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: CNAME  TUTORIAL.md  index.html
evaluation/: 01_baseline_chat.py  02_tool_calling.py  03_mcp_nba.py  04_multi_turn.py  05_mcp_multi_turn.py  06_freeagent_baseline.py  07_freeagent_multi_turn.py  08_freeagent_mcp.py  09_skills_ab_test.py  10_memory_usability.py  11_freeagent_conversation.py  12_adversarial.py  13_component_ab.py  14_failure_diagnostic.py  15_autotune_ab.py  16_streaming_latency.py  17_trace_completeness.py  CONVERSATION_REPORT.md  README.md  REPORT.md  THESIS_ANALYSIS.md  adversarial_cases.py  adversarial_freeagent_results.json  adversarial_results.json  autotune_ab_freeagent_results.json  autotune_ab_results.json  baseline_chat_output.txt  baseline_chat_results.json  component_ab_freeagent_results.json  component_ab_results.json  eval_utils.py  failure_diagnostic_results.json  freeagent_conversation_comparison.py  freeagent_conversation_results.json  freeagent_mcp_results.json  freeagent_multi_turn_results.json  freeagent_tool_calling_results.json  freeagent_vs_baseline.py  mcp_multi_turn_output.txt  mcp_nba_output.txt  (+13 more)
evaluation/baseline_results/: baseline_chat_results.json  mcp_multi_turn_results.json  multi_turn_results.json  tool_calling_results.json
examples/: 01_hello.py  02_builtin_tools.py  03_custom_tool.py  04_hooks.py  05_memory.py  06_mcp.py  tutorial.py
freeagent/: __init__.py  _sync.py  agent.py  cli.py  config.py  context.py  conversation.py  events.py  memory.py  model_info.py  sanitize.py  skills.py  telemetry.py
freeagent/engines/: __init__.py
freeagent/mcp/: __init__.py  adapter.py  client.py
freeagent/providers/: __init__.py  ollama.py  openai_compat.py
freeagent/skills/general-assistant/: SKILL.md
freeagent/skills/tool-user/: SKILL.md
freeagent/tools/: calculator.py  shell.py  system_info.py
research/: STRANDSCLAW_BLUEPRINT.md  deep-research-report.md  openclaw.md
src/: agent.py  circuit_breaker.py  config.py  hooks.py  memory.py  messages.py  skills.py  tool.py  validator.py
src/engines/: __init__.py
src/providers/: ollama.py  openai_compat.py
src/tools/: __init__.py
tests/: test_agent.py  test_caching.py  test_circuit_breaker.py  test_cli.py  test_context.py  test_conversation.py  test_engines.py  test_mcp.py  test_memory.py  test_messages.py  test_model_info.py  test_parallel.py  test_providers.py  test_sanitize.py  test_skills.py  test_streaming.py  test_telemetry.py  test_tool.py  test_trace.py  test_validator.py
tests/integration/: __init__.py  conftest.py  test_live_chat.py  test_live_conversation.py  test_live_memory.py  test_live_model_info.py  test_live_react.py  test_live_skills.py  test_live_streaming.py  test_live_tools.py
