[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freeagent-sdk"
version = "0.3.3"
description = "Local-first AI agent framework. Built for models that aren't perfect."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "FreeAgent Contributors"},
]
keywords = ["ai", "agents", "llm", "ollama", "vllm", "local", "tool-calling", "mcp", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
mcp = [
    "mcp>=1.0.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.scripts]
freeagent = "freeagent.cli:main"

[project.urls]
Homepage = "https://freeagentsdk.com"
Documentation = "https://freeagentsdk.com"
Repository = "https://github.com/labeveryday/freeagent-sdk"
Issues = "https://github.com/labeveryday/freeagent-sdk/issues"
Changelog = "https://github.com/labeveryday/freeagent-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["freeagent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live tests requiring Ollama running locally",
]
